<!--
  ~                    GNU GENERAL PUBLIC LICENSE
  ~                        Version 3, 29 June 2007
  ~
  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
  ~  Everyone is permitted to copy and distribute verbatim copies
  ~  of this license document, but changing it is not allowed.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--<resources>
    <string name="app_name">Çirkin</string>
    <string name="title_activity_second">Çirkin</string>
    <string name="save">Kaydet</string>
    <string name="info">Bilgi</string>
    <string name="edit">Düzenle</string>
    <string name="delete">Sil</string>
    <string name="thoughts">İçinden neler geçiyorsa yaz :)</string>
    <string name="yes_delete">Evet,Sil</string>
    <string name="delete_it">Silinsin mi?</string>
    <string name="password">Şifre ayarları</string>
    <string name="title_activity_settings">Çirkin Ayarları</string>
</resources>-->
<resources>
    <string name="app_name">Your Story</string>
    <string name="title_activity_second">Your Story</string>
    <string name="save">Save</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="thoughts">Write whatever you want :)</string>
    <string name="yes_delete">Yes,delete</string>
    <string name="delete_it">Delete ?</string>
    <string name="password">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="enter_with_password">Login with password</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="password_text">Password ..</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_password">Enter password ..</string>
    <string name="start_duration">Start duration(s)</string>
</resources>
