<!--
  ~                    GNU GENERAL PUBLIC LICENSE
  ~                        Version 3, 29 June 2007
  ~
  ~  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
  ~  Everyone is permitted to copy and distribute verbatim copies
  ~  of this license document, but changing it is not allowed.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="semiworld.org.logger.activities.MainActivity">
    <item
        android:id="@+id/action_mode"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="200"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
